# dingo

./: .gitignore  README.md  db.sqlite3  pyproject.toml
dingo/: settings.py  urls.py
greetings/: urls.py  views.py
maths/: admin.py  forms.py  models.py  urls.py  views.py
maths/fixtures/: math.json  result.json
maths/migrations/: 0001_initial.py  0002_auto_20200913_1346.py  0003_auto_20200913_1540.py
maths/templates/maths/: list.html  main.html
maths/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
posts/: admin.py  forms.py  models.py  urls.py  views.py
posts/fixtures/: authors.json  posts.json
posts/migrations/: 0001_initial.py  0002_auto_20200913_2007.py  0003_auto_20200913_2018.py
posts/templates/posts/: author_details.html  author_list.html  details.html  list.html
posts/tests/: test_forms.py  test_models.py  test_views.py
sessions/: urls.py
