[tool.poetry]
name = "dingo"
version = "0.1.0"
description = "Kurs kodilla"
authors = ["Adrian Jelonek <ajelonek@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
django = "^3.1.1"
lorem = "^0.1.1"
ipython = "^7.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
